HelloUltraviolet/Fixtures/RejectedSource/SourceText/LeadingBOMEmbeddedBOM/Expected.uv
//! Expected diagnostic metadata for the LeadingBOMEmbeddedBOM rejected-source specimen.

expectedDiagnostic("W-SRC-0101", "req.LeadingBOMWarningPersistence")
expectedDiagnostic("E-SRC-0103", "Span-BOM-Embedded")
